src/test/resources/testcases/invalid/void_return.tc
// Test type mismatch or void return
void doSomething() {
    return 1; // Should fail (void func can't return value)
}
int main() {
    return 0;
}
